Update application.properties, .gitignore and pom.xml